# Volta-office-all-in-one-Command-Center

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  pyproject.toml  requirements.txt
.claude/skills/cut-release/: SKILL.md
.claude/skills/cut-release/scripts/: cut_release.sh  verify_release.sh
.github/workflows/: redteam.yml
config/: default.yaml
redteam/: runner.py  snapshot_tool.py
redteam/probes/: __init__.py  advanced.py  base.py  benign.py  encoding.py  escalation.py  exfiltration.py  injection.py  jailbreak.py  multilingual.py
redteam/snapshots/: probe_outcomes.json
src/bella_harness/: __init__.py  cli.py  config.py  harness.py
src/bella_harness/backends/: __init__.py  anthropic_backend.py  base.py  ollama_backend.py  openai_backend.py  openrouter_backend.py
src/bella_harness/deterministic/: engine.py  rules.py
tests/: test_backends.py  test_config.py  test_deterministic.py  test_evasion.py  test_false_positives.py  test_harness.py  test_output_scanning.py  test_readme_quickstart.py  test_redteam_runner.py  test_regression_snapshot.py
